--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
         <p>Aperte 'Enter' para iniciar</p>
     </div>
 
+    <div id="teclasAndar" class="teclasAndar"> 
+        <p>use</p>
+        <img src="img/wasd.png" width="213" height="107">
+        <p>ou</p>
+        <img src="img/setasandar.png" width="243" height="117">
+        <p>para andar</p>
+    </div>
+
     
 </div>
 
