--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
     <div class="textocreditos" id="textocreditos"><h2>Backward</h2>
     <p>Por:<br> Rafaela Thais<br>
-       Rodrigo Lovise<br>
+       Rodrigo Lovisi<br>
        Sarah Gomes<br>
        Giovana Lopes<br>
-       Jenifer Yasminbr
+       Jenifer Yasmin
     </p></div>
 
     <div class="respira" id="respira">
@@ -108,9 +108,9 @@
 <script src="data/telan.js"></script>
 <script src="js/dialogos.js"></script>
 <script src="js/capitulos.js"></script>
+<script src="js/musica.js"></script>
 <script src="js/capitulo1.js"></script>
 <script src="js/menu.js"></script>
-<script src="js/musica.js"></script>
 <script src="js/save.js"></script>
 <script src="js/configs.js"></script>
 <script  type="module" src="./js/index.js"></script>
